logs/Slang/generated/hdlconv/hdlconvertor_p827.sv.log
name: hdlconvertor_p827
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p827.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p827.sv:4:7: error: expected declarator
trireg (large) #(0,0,50) cap1;
      ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p827.sv:4:8: error: expected member
trireg (large) #(0,0,50) cap1;
       ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p827.sv:5:1: error: expected member
nmos nmos1 (cap1, data, gate); // nmos that drives the trireg
^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p827.sv:7:41: error: use of undeclared identifier '$time'
$monitor("%0d data=%v gate=%v cap1=%v", $time, data, gate, cap1);
                                        ^~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p827.sv:7:60: error: use of undeclared identifier 'cap1'
$monitor("%0d data=%v gate=%v cap1=%v", $time, data, gate, cap1);
                                                           ^~~~
